# Eaton_633_Project

./: .gitignore  README.md  citations.txt  pyproject.toml  requirements.txt
data/metrics/: metrics.csv
notebooks/: 00_Data_Exploration.ipynb  01_Data_Exploration.ipynb  01_Data_Preperation.ipynb  02_Linear_Models.ipynb  02_Random_Forest.ipynb  03_Linear_Models.ipynb
src/: metrics_db.py  utils.py
src/shared_util/: dataio.py
src/shared_util/data/metrics/: metrics.csv
src/shared_util/metrics/: printing.py
src/shared_util/utils/: utils.py
tests/: test_db.py  test_logs.py
