[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared_util"
version = "0.1.0"
description = "Shared utilities for DSCI 633 project"
requires-python = ">=3.10"
authors = [{ name = "Michael C. Eaton" }]

dependencies = [
    # Core scientific stack
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scipy>=1.16.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",

    # Machine learning
    "scikit-learn>=1.7.0",
    "imbalanced-learn>=0.14.0",
    "joblib>=1.3.0",
    "threadpoolctl>=3.5.0",

    # General utilities
    "requests>=2.32.0",
    "python-dateutil>=2.9.0",
    "PyYAML>=6.0.0",
    "ucimlrepo>=0.0.7"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
