[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared_util"
version = "0.1.0"
description = "Shared utilities for DSCI 633 project"
requires-python = ">=3.10"
authors = [{ name = "Michael C. Eaton" }]

dependencies = [
    # Core scientific stack
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",

    # Machine learning
    "scikit-learn",
    "imbalanced-learn",
    "joblib",
    "threadpoolctl",

    # General utilities
    "requests",
    "python-dateutil",
    "PyYAML",
    "ucimlrepo"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
shared_util = ["data/*.csv"]


[tool.setuptools.packages.find]
where = ["src"]
